Add Address.RoomNumber Use DisplayNameFor and Label tag Add some validation

--- a/Codesanook.OrganizationProfile.csproj
+++ b/Codesanook.OrganizationProfile.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routes.cs" />
     <Compile Include="ViewModels\AddressDisplayViewModel.cs" />
+    <Compile Include="ViewModels\ContactInformationDisplayViewModel.cs" />
     <Compile Include="ViewModels\SocialLinksDisplayViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
