--- a/Codesanook.OrganizationProfile.csproj
+++ b/Codesanook.OrganizationProfile.csproj
@@ -175,6 +175,9 @@
   <ItemGroup>
     <Content Include="Views\Emails\Template.Wrapper.cshtml" />
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Email_Template.ContactUs.cshtml" />
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
