--- a/Codesanook.OrganizationProfile.csproj
+++ b/Codesanook.OrganizationProfile.csproj
@@ -115,6 +115,7 @@
     <Compile Include="ViewModels\SocialLinksDisplayViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include=".gitignore" />
     <Content Include="packages.config" />
     <Content Include="Styles\organization-profile.css" />
     <Content Include="Web.config" />
@@ -174,6 +175,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="README.md" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_Data\Localization\th-TH\orchard.module.po" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
