--- a/Codesanook.OrganizationProfile.csproj
+++ b/Codesanook.OrganizationProfile.csproj
@@ -103,10 +103,12 @@
     <Compile Include="Drivers\ContactInformationPartDriver.cs" />
     <Compile Include="Drivers\AddressPartDriver.cs" />
     <Compile Include="Drivers\ContactFormPartDriver.cs" />
+    <Compile Include="Handlers\OrganizationProfileSettingPartHandler.cs" />
     <Compile Include="Migrations.cs" />
     <Compile Include="Models\AddressPart.cs" />
     <Compile Include="Models\ContactFormPart.cs" />
     <Compile Include="Models\ContactInformationPart.cs" />
+    <Compile Include="Models\OrganizationProfileSettingPart.cs" />
     <Compile Include="Models\SocialLinksPart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Routes.cs" />
@@ -177,6 +179,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\Localization\th-TH\orchard.module.po" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\EditorTemplates\Parts\OrganizationProfileSetting.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
