--- a/.gitignore
+++ b/.gitignore
@@ -349,5 +349,6 @@ MigrationBackup/
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
 
+# Not ignore localization
 !App_Data/Localization
 
