--- a/Codesanook.OrganizationProfile.csproj
+++ b/Codesanook.OrganizationProfile.csproj
@@ -143,6 +143,10 @@
       <Project>{05660F47-D649-48BD-9DED-DF4E01E7CFF9}</Project>
       <Name>Orchard.Email</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Orchard.Widgets\Orchard.Widgets.csproj">
+      <Project>{194d3ccc-1153-474d-8176-fde8d7d0d0bd}</Project>
+      <Name>Orchard.Widgets</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Parts\ContactInformation.cshtml" />
@@ -166,9 +170,6 @@
     <Content Include="Views\EditorTemplates\Parts\ContactInformation.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Parts\SocialLinks.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\SocialLinks.cshtml" />
   </ItemGroup>
   <ItemGroup>
@@ -182,6 +183,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\EditorTemplates\Parts\OrganizationProfileSetting.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Parts\SocialLinks.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
